chore: add git status in bashrc
- change helix theme

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,7 +1,7 @@
+theme="autumn_night"
 # theme="ao"
 # theme="bogster"
 # theme = "horizon-dark"
-theme = "kaolin-light"
 
 [editor]
 true-color=true # 真彩
