--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@
 ################
 
 # 参见 https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080@144,auto,auto
+monitor=,preferred,auto,2
 
 ###################
 ### 我的程序 ###
@@ -33,6 +33,8 @@ $menu = rofi -show drun
 
 exec-once = waybar
 exec-once = fcitx5 --replace -d
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = wpaperd -d
 
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -277,3 +279,11 @@ windowrule = suppressevent maximize, class:.*
 
 # 修复 XWayland 的一些拖动问题
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+
+xwayland {
+  force_zero_scaling = true
+}
+# env = GDK_SCALE,2
+# env = XCURSOR_SIZE,32
