add waybar config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,7 +60,7 @@ general {
     gaps_in = 2        # 窗口内部间隙
     gaps_out = 10      # 窗口外部间隙
 
-    border_size = 1    # 边框大小
+    border_size = 0    # 边框大小
 
     # 有关颜色的信息，请参见 https://wiki.hyprland.org/Configuring/Variables/#variable-types
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg  # 活动窗口边框颜色
@@ -281,9 +281,9 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 
-
+# 禁用xwayland缩放
 xwayland {
   force_zero_scaling = true
 }
-# env = GDK_SCALE,2
-# env = XCURSOR_SIZE,32
+# 使用dpi设置两倍缩放
+exec-once = xrdb -merge ~/.Xresources
